@@ -40,6 +40,28 @@ name|java
 operator|.
 name|lang
 operator|.
+name|invoke
+operator|.
+name|MethodHandles
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|lang
+operator|.
+name|invoke
+operator|.
+name|MethodType
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|lang
+operator|.
 name|reflect
 operator|.
 name|Constructor
@@ -661,11 +683,16 @@ name|values
 argument_list|()
 control|)
 block|{
-name|checkFunction
+name|checkFunctionClassLoader
 argument_list|(
 name|m
 argument_list|,
 name|parent
+argument_list|)
+expr_stmt|;
+name|checkFunction
+argument_list|(
+name|m
 argument_list|)
 expr_stmt|;
 block|}
@@ -3895,13 +3922,6 @@ decl_stmt|;
 name|checkFunction
 argument_list|(
 name|method
-argument_list|,
-name|JavascriptCompiler
-operator|.
-name|class
-operator|.
-name|getClassLoader
-argument_list|()
 argument_list|)
 expr_stmt|;
 name|map
@@ -3943,6 +3963,7 @@ name|map
 argument_list|)
 expr_stmt|;
 block|}
+comment|/** Check Method signature for compatibility. */
 DECL|method|checkFunction
 specifier|private
 specifier|static
@@ -3951,70 +3972,36 @@ name|checkFunction
 parameter_list|(
 name|Method
 name|method
-parameter_list|,
-name|ClassLoader
-name|parent
 parameter_list|)
 block|{
-comment|// We can only call the function if the given parent class loader of our compiled class has access to the method:
+comment|// check that the Method is public in some public reachable class:
 specifier|final
-name|ClassLoader
-name|functionClassloader
-init|=
+name|MethodType
+name|type
+decl_stmt|;
+try|try
+block|{
+name|type
+operator|=
+name|MethodHandles
+operator|.
+name|publicLookup
+argument_list|()
+operator|.
+name|unreflect
+argument_list|(
 name|method
+argument_list|)
 operator|.
-name|getDeclaringClass
-argument_list|()
-operator|.
-name|getClassLoader
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|functionClassloader
-operator|!=
-literal|null
-condition|)
-block|{
-comment|// it is a system class iff null!
-name|boolean
-name|found
-init|=
-literal|false
-decl_stmt|;
-while|while
-condition|(
-name|parent
-operator|!=
-literal|null
-condition|)
-block|{
-if|if
-condition|(
-name|parent
-operator|==
-name|functionClassloader
-condition|)
-block|{
-name|found
-operator|=
-literal|true
-expr_stmt|;
-break|break;
-block|}
-name|parent
-operator|=
-name|parent
-operator|.
-name|getParent
+name|type
 argument_list|()
 expr_stmt|;
 block|}
-if|if
-condition|(
-operator|!
-name|found
-condition|)
+catch|catch
+parameter_list|(
+name|IllegalAccessException
+name|iae
+parameter_list|)
 block|{
 throw|throw
 operator|new
@@ -4022,10 +4009,9 @@ name|IllegalArgumentException
 argument_list|(
 name|method
 operator|+
-literal|" is not declared by a class which is accessible by the given parent ClassLoader."
+literal|" is not accessible (declaring class or method not public)."
 argument_list|)
 throw|;
-block|}
 block|}
 comment|// do some checks if the signature is "compatible":
 if|if
@@ -4052,88 +4038,40 @@ literal|" is not static."
 argument_list|)
 throw|;
 block|}
-if|if
-condition|(
-operator|!
-name|Modifier
-operator|.
-name|isPublic
-argument_list|(
-name|method
-operator|.
-name|getModifiers
-argument_list|()
-argument_list|)
-condition|)
-block|{
-throw|throw
-operator|new
-name|IllegalArgumentException
-argument_list|(
-name|method
-operator|+
-literal|" is not public."
-argument_list|)
-throw|;
-block|}
-if|if
-condition|(
-operator|!
-name|Modifier
-operator|.
-name|isPublic
-argument_list|(
-name|method
-operator|.
-name|getDeclaringClass
-argument_list|()
-operator|.
-name|getModifiers
-argument_list|()
-argument_list|)
-condition|)
-block|{
-throw|throw
-operator|new
-name|IllegalArgumentException
-argument_list|(
-name|method
-operator|.
-name|getDeclaringClass
-argument_list|()
-operator|.
-name|getName
-argument_list|()
-operator|+
-literal|" is not public."
-argument_list|)
-throw|;
-block|}
 for|for
 control|(
-name|Class
-argument_list|<
-name|?
-argument_list|>
-name|clazz
-range|:
-name|method
+name|int
+name|arg
+init|=
+literal|0
+init|,
+name|arity
+init|=
+name|type
 operator|.
-name|getParameterTypes
+name|parameterCount
 argument_list|()
+init|;
+name|arg
+operator|<
+name|arity
+condition|;
+name|arg
+operator|++
 control|)
 block|{
 if|if
 condition|(
-operator|!
-name|clazz
+name|type
 operator|.
-name|equals
+name|parameterType
 argument_list|(
+name|arg
+argument_list|)
+operator|!=
 name|double
 operator|.
 name|class
-argument_list|)
 condition|)
 block|{
 throw|throw
@@ -4142,16 +4080,16 @@ name|IllegalArgumentException
 argument_list|(
 name|method
 operator|+
-literal|" must take only double parameters"
+literal|" must take only double parameters."
 argument_list|)
 throw|;
 block|}
 block|}
 if|if
 condition|(
-name|method
+name|type
 operator|.
-name|getReturnType
+name|returnType
 argument_list|()
 operator|!=
 name|double
@@ -4166,6 +4104,86 @@ argument_list|(
 name|method
 operator|+
 literal|" does not return a double."
+argument_list|)
+throw|;
+block|}
+block|}
+comment|/** Cross check if declaring class of given method is the same as    * returned by the given parent {@link ClassLoader} on string lookup.    * This prevents {@link NoClassDefFoundError}.    */
+DECL|method|checkFunctionClassLoader
+specifier|private
+specifier|static
+name|void
+name|checkFunctionClassLoader
+parameter_list|(
+name|Method
+name|method
+parameter_list|,
+name|ClassLoader
+name|parent
+parameter_list|)
+block|{
+name|boolean
+name|ok
+init|=
+literal|false
+decl_stmt|;
+try|try
+block|{
+specifier|final
+name|Class
+argument_list|<
+name|?
+argument_list|>
+name|clazz
+init|=
+name|method
+operator|.
+name|getDeclaringClass
+argument_list|()
+decl_stmt|;
+name|ok
+operator|=
+name|Class
+operator|.
+name|forName
+argument_list|(
+name|clazz
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+literal|false
+argument_list|,
+name|parent
+argument_list|)
+operator|==
+name|clazz
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|ClassNotFoundException
+name|e
+parameter_list|)
+block|{
+name|ok
+operator|=
+literal|false
+expr_stmt|;
+block|}
+if|if
+condition|(
+operator|!
+name|ok
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+name|method
+operator|+
+literal|" is not declared by a class which is accessible by the given parent ClassLoader."
 argument_list|)
 throw|;
 block|}
