@@ -1100,7 +1100,7 @@ argument_list|()
 operator|.
 name|contains
 argument_list|(
-literal|"is not public"
+literal|"not public"
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1197,7 +1197,7 @@ argument_list|()
 operator|.
 name|contains
 argument_list|(
-literal|"is not public"
+literal|"not public"
 argument_list|)
 argument_list|)
 expr_stmt|;
